# rplay

./: .gitignore  README.md  atc.rs  rarch.rs  rustr  size_align.rs
2pillars/: countries.json
arch/: Cargo.toml
ascii/: Cargo.toml
ascii/src/: main.rs
benches/: Cargo.toml
benches/benches/: util_benches.rs
benches/src/: lib.rs
cat/: Cargo.toml
cat/src/: error.rs  main.rs
ci/: Cargo.toml  script.sh
ci/src/: main.rs
cpuid/: Cargo.toml
cpuid/src/: features.rs.text  main.rs
crates/: Cargo.toml  packages
crates/src/: main.rs
gist/: Cargo.toml
gist/src/: main.rs
ikit/: Cargo.toml
ikit/src/: main.rs
leetcode/: Cargo.toml
leetcode/src/: first_missing.rs  main.rs  median_of_2arrays.rs
mkdir/: Cargo.toml
mkdir/src/: args.rs  error.rs  main.rs
nom/: Cargo.toml
nom/src/: main.rs
nums/: Cargo.toml
nums/src/: main.rs
ocr/: Cargo.toml
ocr/src/: main.rs
sudoku/: Cargo.toml
sudoku/src/: main.rs  sudoku.rs  tests.rs
