[package]
name = "benches"
version = "0.1.0"
authors = ["prataprc <prataprc@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[profile.bench]
debug = true

[dependencies]
rand = "0.6.4"
