[package]
name = "ikit"
version = "0.1.0"
authors = ["prataprc <prataprc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = { version = "0.16.1", features = ["specs-derive"] }
vulkano = { version = "0.21", path = "/home/prataprc/graphics/vulkano/vulkano/" }
glfw = "0.41.0"
structopt = { version = "*", default-features = false }
uuid = "0.8"

